--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "author": "andreevWork",
     "license": "ISC",
     "jest": {
-        "setupFilesAfterEnv": ["./test/setup.js"]
+        "setupFilesAfterEnv": [
+            "./test/setup.js"
+        ]
     },
     "dependencies": {
+        "amqplib": "^0.6.0",
         "axios": "^0.19.2",
         "body-parser": "^1.19.0",
         "cron-parser": "^2.18.0",
